2022/cert-manager-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
#  labels:
#    certmanager.k8s.io/disable-validation: "true"
  name: cert-manager
